# bridge-bots

./: .gitignore  LICENSE  README.md  acbl_double_dummy.py  bridge.py  hand_dao.py  mathematics.py  parse_recap.py  postgres_help.txt  scrape.py
bridge/: deal.py  deal_enums.py  double_dummy.py  table_record.py
bridgebots/: CHANGELOG.md  Changelog.md  README.md  Readme.md  pyproject.toml
bridgebots/bridgebots/: __init__.py  bb_json.py  bids.py  board_record.py  convert_scratch.py  deal.py  deal_enums.py  deal_utils.py  double_dummy.py  lin.py  pbn.py  play_utils.py  schemas.py  table_record.py
bridgebots/tests/: binary_deal_test.py  deal_test.py  double_dummy_score_test.py  sample.pbn  test_board_record.py  test_deal.py  test_deal_utils.py  test_double_dummy_score.py  test_lin.py  test_pbn.py  test_play_utils.py  test_schemas.py
bridgebots/tests/resources/: sample.lin  sample.pbn  shared_deals.pbn  usbf_sf_14502.lin
deal/: binary_deal.py  deal.py  deal_enums.py  double_dummy.py  table_record.py
parse/: parse_major_tournaments.py  parse_quicktricks_recap.py  parse_recap.py  parse_usbc.py  parse_vugraph_project.py  pbn.py
plot/: bridge_analysis.ipynb
scrape/: acbl_client.py  acbl_double_dummy.py  hand_record_statistics.py  parse_bbo.py  parse_quicktricks_recap.py  scrape_all_acbl.py  scrape_bbo.py  scrape_nabc.py  scrape_quicktricks.py
sequence/: README.md  batch_example.py  bid_four_hand_lstm.py  bid_four_hand_lstm_v2.py  bidding_training_data.py  bridge_sequence_utils.py  create_sequence_data.py  evaluate_bid_four_hand.py  inspect_vugraph_project.py  one_hand_bidding_training_data.py  one_hand_create_training_data.py  one_hand_lstm.py  one_hand_sequence_example_lstm.py  one_hand_tfdata.py  one_hand_tfdata_lstm.py  one_hand_tfrecord_lstm.py  pyproject.toml
sequence/bridgebots_sequence/: __init__.py  bidding_context_features.py  bidding_lstm.py  bidding_sequence_features.py  confusion_evaulation.py  create_sequence_examples.py  dataset_pipeline.py  evaluation.py  evaluation_scratch.py  feature_utils.py  inference.py  interpreter.py  model_metadata.py  sequence_schemas.py  train_bidding_lstm.py  training_utils.py
sequence/dev/: bid_four_hand_lstm.py  create_sequence_data.py  evaluate_bid_four_hand.py  one_hand_bidding_training_data.py  one_hand_create_training_data.py  one_hand_lstm.py  one_hand_sequence_example_lstm.py  one_hand_tfdata.py  one_hand_tfdata_lstm.py  one_hand_tfrecord_lstm.py  scratch.py
sequence/release/: create_data_splits.py  create_sequence_examples.py
sequence/sequence/: bidding_context_features.py  bidding_lstm.py  bidding_sequence_features.py  create_data_splits.py  create_sequence_examples.py  dataset_pipeline.py  feature_utils.py  streamlined_bidding_lstm.py  streamlined_dataset_pipeline.py
sequence/tests/: test_sequence_schemas.py
sql/: create_db.sql  create_double_dummy.sql  hand_dao.py  postgres_help.txt
test/: binary_deal_test.py  deal_test.py  (+1 more)
tools/: CHANGELOG.md  README.md  pyproject.toml
tools/bridgebots_tools/: compare_contracts_csv_report.py  csv_report.py  csv_utilities.py  data_extractors.py  practice_deals.py  strip_lin.py  tools_logging.py
tools/tools/: teams_csv_report.py
(+115 files in other folders)
