[tool.poetry]
name = "bridgebots"
version = "0.0.11a1"
description = "Data processing for Contract Bridge"
authors = ["Forrest Rice <forrest.d.rice@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
marshmallow = "^3.12.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
