[tool.poetry]
name = "sequence"
version = "0.0.1"
description = "sequence models for bridge"
authors = ["Forrest Rice <forrest.d.rice@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
tensorflow = "^2.7.0"
bridgebots = "^0.0.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
