[tool.poetry]
name = "sequence"
version = "0.0.1-dev0"
description = "Sequence models for Contract Bridge"
authors = ["Forrest Rice <forrest.d.rice@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
tensorflow = "^2.7.0"
bridgebots = "^0.0.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120