[tool.poetry]
name = "bridgebots_sequence"
version = "0.0.1-dev0"
description = "Sequence models for Contract Bridge"
authors = ["Forrest Rice <forrest.d.rice@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
tensorflow = {version = "^2.8.0", optional=true}
tensorflow_macos = {version = "^2.8.0", optional=true}
bridgebots = "^0.0.10"

[tool.poetry.extras]
tf = ["tensorflow"]
tf_macos = ["tensorflow-macos"]

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120