[tool.poetry]
name = "bridgebots_tools"
version = "0.0.2"
description = "Tools which utilize the Bridgebots package to process data"
authors = ["Forrest Rice <forrest.d.rice@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
bridgebots =  "~0.0.10"
click = "^8.0.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
